syntax = "proto3";

package relay;

option go_package = "go/relay";


message RelayState {
    bool is_on = 1; // Indicates if the relay is currently on or off
    double current_reading = 2; // The current power reading in watts
    double voltage_reading = 3; // The voltage reading in volts
    double power_factor = 4; // Power factor, typically a value between -1 and 1
    int64 timestamp = 5; // Timestamp of the reading in seconds since epoch
}
